[project]
name = "researchflow-chat-demo"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.138.1",
  "requests==2.32.5",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.20",
]

[tool.vercel]
entrypoint = "backend.main:app"

[tool.vercel.scripts]
build = "cd frontend && npm install && npm run build"
